Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4903

qml completions offer deleteLater() instead of destroy()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.5.0-beta
    • Qt Creator 2.1.0
    • Quick / QML Support
    • None
    • linux, qt 4.7.3
    • c5ff08fe885d60e46fb04a2dcbe6a451dacd97d2

    Description

      if i am in a component that was created dynamically,
      and I want to delete it, I type

      itemId.de(look at completions)
      I would expect to see "destroy()" there but instead I see "deleteLater()".
      When I try to use deleteLater, it doesn't work.

      bug : creator offers the wrong suggestion.
      Sugestion: why not make deleteLater() equivalent to destroy() ?

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ckamm Christian Kamm
              ezustics Alan Ezust
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes