qmlplugindump: Fix QObject dump.

* Hide deleteLater and the destroyed signal.
* Add destroy and toString functions.

Task-number: QTCREATORBUG-4903
Change-Id: Icbae3e1c82605baa84ac9cc8f38cd747e4dcf687
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>